# Alenka-master

./: CMakeLists.txt
libraries/EDFlib/: LICENSE  README.md  configure.ac
libraries/ElkoAlenka/resources/: main.qml  qtquickcontrols2.conf  resources.qrc
libraries/ElkoAlenka/resources/+universal/: Button.qml  ComboBox.qml  Label.qml  SpinBox.qml  Switch.qml
libraries/ElkoAlenka/resources/pages/: Brain.qml  (+18 more)
libraries/spikedet/src/: CDSP.h  CException.cpp  CException.h  CInputModel.h  CMain.cpp  CMain.h  CMainFrame.cpp  CMainFrame.h  CSettingsDialog.cpp  CSettingsDialog.h  CSettingsModel.cpp  CSettingsModel.h  CSpikeDetector.cpp  CSpikeDetector.h  Definitions.h  spikedetoutput.h
src/: AButton.cpp  AButton.h  AComboBox.cpp  AComboBox.h  AQuestionDialog.cpp  AQuestionDialog.h  AQuestionDialog_moc.cpp  ARealDialog.cpp  ARealDialog.h  ATimerDialog.cpp  ATimerDialog.h  ATimerDialog_moc.cpp  ATimerInputBox.cpp  ATimerInputBox.h  ATimerInputBox_moc.cpp  ColumnCellView.cpp  ComparatorXML.cpp  ComparatorXML.h  EventTypeXML.cpp  EventTypeXML.h  MontageXML.cpp  MontageXML.h  TimerManipulator.h  TrackTableXML.h  TrackView.cpp  TrackView.h  XMLAtributes.cpp  XMLAtributes.h  canvas.cpp  canvas.h  options.h  signalfilebrowserwindow.cpp  signalfilebrowserwindow.h  signalviewer.cpp  signalviewer.h  tracklabelbar.cpp  tracklabelbar.h
src/DataModel/: infotable.h
src/Manager/: codeeditdialog.cpp  codeeditdialog.h  eventtypetablemodel.cpp  manager.cpp  manager.h  tablemodel.cpp  tracktablemodel.cpp
src/SignalProcessor/: bipolarmontage.cpp  signalprocessor.cpp  signalprocessor.h
